@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.datastreams.lifecycle;
@@ -26,6 +27,7 @@ import org.elasticsearch.action.datastreams.lifecycle.ErrorEntry;
 import org.elasticsearch.action.downsample.DownsampleAction;
 import org.elasticsearch.action.downsample.DownsampleConfig;
 import org.elasticsearch.action.support.DefaultShardOperationFailedException;
+import org.elasticsearch.action.support.IndexComponentSelector;
 import org.elasticsearch.action.support.broadcast.BroadcastResponse;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterName;
@@ -35,13 +37,16 @@ import org.elasticsearch.cluster.TestShardRoutingRoleStrategies;
 import org.elasticsearch.cluster.block.ClusterBlock;
 import org.elasticsearch.cluster.block.ClusterBlocks;
 import org.elasticsearch.cluster.metadata.DataStream;
+import org.elasticsearch.cluster.metadata.DataStreamGlobalRetentionSettings;
 import org.elasticsearch.cluster.metadata.DataStreamLifecycle;
 import org.elasticsearch.cluster.metadata.DataStreamLifecycle.Downsampling;
 import org.elasticsearch.cluster.metadata.DataStreamLifecycle.Downsampling.Round;
+import org.elasticsearch.cluster.metadata.DataStreamOptions;
 import org.elasticsearch.cluster.metadata.DataStreamTestHelper;
 import org.elasticsearch.cluster.metadata.IndexAbstraction;
 import org.elasticsearch.cluster.metadata.IndexGraveyard;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.MetadataIndexStateService;
 import org.elasticsearch.cluster.node.DiscoveryNode;
@@ -62,9 +67,7 @@ import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.ByteSizeValue;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.core.Tuple;
-import org.elasticsearch.datastreams.DataStreamFeatures;
 import org.elasticsearch.datastreams.lifecycle.health.DataStreamLifecycleHealthInfoPublisher;
-import org.elasticsearch.features.FeatureService;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexMode;
 import org.elasticsearch.index.IndexSettings;
@@ -115,8 +118,11 @@ import static org.elasticsearch.datastreams.lifecycle.DataStreamLifecycleService
 import static org.elasticsearch.datastreams.lifecycle.DataStreamLifecycleService.TARGET_MERGE_FACTOR_VALUE;
 import static org.elasticsearch.test.ClusterServiceUtils.createClusterService;
 import static org.elasticsearch.test.ClusterServiceUtils.setState;
+import static org.hamcrest.Matchers.arrayContaining;
+import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
@@ -133,6 +139,9 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
     private List<TransportRequest> clientSeenRequests;
     private DoExecuteDelegate clientDelegate;
     private ClusterService clusterService;
+    private final DataStreamGlobalRetentionSettings globalRetentionSettings = DataStreamGlobalRetentionSettings.create(
+        ClusterSettings.createBuiltInClusterSettings()
+    );
 
     @Before
     public void setupServices() {
@@ -172,13 +181,8 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             () -> now,
             errorStore,
             allocationService,
-            new DataStreamLifecycleHealthInfoPublisher(
-                Settings.EMPTY,
-                client,
-                clusterService,
-                errorStore,
-                new FeatureService(List.of(new DataStreamFeatures()))
-            )
+            new DataStreamLifecycleHealthInfoPublisher(Settings.EMPTY, client, clusterService, errorStore),
+            globalRetentionSettings
         );
         clientDelegate = null;
         dataStreamLifecycleService.init();
@@ -200,6 +204,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             builder,
             dataStreamName,
             numBackingIndices,
+            2,
             settings(IndexVersion.current()),
             DataStreamLifecycle.newBuilder().dataRetention(0).build(),
             now
@@ -209,20 +214,28 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(builder).build();
 
         dataStreamLifecycleService.run(state);
-        assertThat(clientSeenRequests.size(), is(3));
+        assertThat(clientSeenRequests.size(), is(5));
         assertThat(clientSeenRequests.get(0), instanceOf(RolloverRequest.class));
-        assertThat(((RolloverRequest) clientSeenRequests.get(0)).getRolloverTarget(), is(dataStreamName));
-        List<DeleteIndexRequest> deleteRequests = clientSeenRequests.subList(1, 3)
+        RolloverRequest rolloverBackingIndexRequest = (RolloverRequest) clientSeenRequests.get(0);
+        assertThat(rolloverBackingIndexRequest.getRolloverTarget(), is(dataStreamName));
+        assertThat(clientSeenRequests.get(1), instanceOf(RolloverRequest.class));
+        RolloverRequest rolloverFailureIndexRequest = (RolloverRequest) clientSeenRequests.get(1);
+        assertThat(
+            rolloverFailureIndexRequest.getRolloverTarget(),
+            is(IndexNameExpressionResolver.combineSelector(dataStreamName, IndexComponentSelector.FAILURES))
+        );
+        List<DeleteIndexRequest> deleteRequests = clientSeenRequests.subList(2, 5)
             .stream()
             .map(transportRequest -> (DeleteIndexRequest) transportRequest)
             .toList();
         assertThat(deleteRequests.get(0).indices()[0], is(dataStream.getIndices().get(0).getName()));
         assertThat(deleteRequests.get(1).indices()[0], is(dataStream.getIndices().get(1).getName()));
+        assertThat(deleteRequests.get(2).indices()[0], is(dataStream.getFailureIndices().get(0).getName()));
 
         // on the second run the rollover and delete requests should not execute anymore
         // i.e. the count should *remain* 1 for rollover and 2 for deletes
         dataStreamLifecycleService.run(state);
-        assertThat(clientSeenRequests.size(), is(3));
+        assertThat(clientSeenRequests.size(), is(5));
     }
 
     public void testRetentionNotConfigured() {
@@ -248,11 +261,13 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
     public void testRetentionNotExecutedDueToAge() {
         String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
         int numBackingIndices = 3;
+        int numFailureIndices = 2;
         Metadata.Builder builder = Metadata.builder();
         DataStream dataStream = createDataStream(
             builder,
             dataStreamName,
             numBackingIndices,
+            numFailureIndices,
             settings(IndexVersion.current()),
             DataStreamLifecycle.newBuilder().dataRetention(TimeValue.timeValueDays(700)).build(),
             now
@@ -261,8 +276,9 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
 
         ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(builder).build();
         dataStreamLifecycleService.run(state);
-        assertThat(clientSeenRequests.size(), is(3)); // rollover the write index, and force merge the other two
+        assertThat(clientSeenRequests.size(), is(5)); // roll over the 2 write indices, and force merge the other three
         assertThat(clientSeenRequests.get(0), instanceOf(RolloverRequest.class));
+        assertThat(clientSeenRequests.get(1), instanceOf(RolloverRequest.class));
     }
 
     public void testRetentionNotExecutedForTSIndicesWithinTimeBounds() {
@@ -283,21 +299,11 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         Metadata.Builder builder = Metadata.builder(clusterState.metadata());
         DataStream dataStream = builder.dataStream(dataStreamName);
         builder.put(
-            new DataStream(
-                dataStreamName,
-                dataStream.getIndices(),
-                dataStream.getGeneration() + 1,
-                dataStream.getMetadata(),
-                dataStream.isHidden(),
-                dataStream.isReplicated(),
-                dataStream.isSystem(),
-                dataStream.isAllowCustomRouting(),
-                dataStream.getIndexMode(),
-                DataStreamLifecycle.newBuilder().dataRetention(0L).build(),
-                dataStream.isFailureStore(),
-                dataStream.getFailureIndices(),
-                null
-            )
+            dataStream.copy()
+                .setName(dataStreamName)
+                .setGeneration(dataStream.getGeneration() + 1)
+                .setLifecycle(DataStreamLifecycle.newBuilder().dataRetention(0L).build())
+                .build()
         );
         clusterState = ClusterState.builder(clusterState).metadata(builder).build();
 
@@ -308,7 +314,55 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         TransportRequest deleteIndexRequest = clientSeenRequests.get(1);
         assertThat(deleteIndexRequest, instanceOf(DeleteIndexRequest.class));
         // only the first generation index should be eligible for retention
-        assertThat(((DeleteIndexRequest) deleteIndexRequest).indices(), is(new String[] { dataStream.getIndices().get(0).getName() }));
+        assertThat(((DeleteIndexRequest) deleteIndexRequest).indices(), arrayContaining(dataStream.getIndices().getFirst().getName()));
+    }
+
+    public void testMergePolicyNotExecutedForTSIndicesWithinTimeBounds() {
+        Instant currentTime = Instant.ofEpochMilli(now).truncatedTo(ChronoUnit.MILLIS);
+        // These ranges are on the edge of each other temporal boundaries.
+        Instant start1 = currentTime.minus(6, ChronoUnit.HOURS);
+        Instant end1 = currentTime.minus(4, ChronoUnit.HOURS);
+        Instant start2 = currentTime.minus(4, ChronoUnit.HOURS);
+        Instant end2 = currentTime.plus(2, ChronoUnit.HOURS);
+        Instant start3 = currentTime.plus(2, ChronoUnit.HOURS);
+        Instant end3 = currentTime.plus(4, ChronoUnit.HOURS);
+
+        String dataStreamName = "logs_my-app_prod";
+        var clusterState = DataStreamTestHelper.getClusterStateWithDataStream(
+            dataStreamName,
+            List.of(Tuple.tuple(start1, end1), Tuple.tuple(start2, end2), Tuple.tuple(start3, end3))
+        );
+        Metadata.Builder builder = Metadata.builder(clusterState.metadata());
+        DataStream dataStream = builder.dataStream(dataStreamName);
+        // Overwrite the data stream in the cluster state to set the lifecycle policy, with no retention policy (i.e. infinite retention).
+        builder.put(
+            dataStream.copy()
+                .setName(dataStreamName)
+                .setGeneration(dataStream.getGeneration() + 1)
+                .setLifecycle(DataStreamLifecycle.newBuilder().build())
+                .build()
+        );
+        clusterState = ClusterState.builder(clusterState).metadata(builder).build();
+
+        dataStreamLifecycleService.run(clusterState);
+        // There should be two client requests: one rollover, and one to update the merge policy settings. N.B. The merge policy settings
+        // will always be updated before the force merge is done, see testMergePolicySettingsAreConfiguredBeforeForcemerge.
+        assertThat(clientSeenRequests.size(), is(2));
+        assertThat(clientSeenRequests.get(0), instanceOf(RolloverRequest.class));
+        TransportRequest updateSettingsRequest = clientSeenRequests.get(1);
+        assertThat(updateSettingsRequest, instanceOf(UpdateSettingsRequest.class));
+        // Only the first generation index should be eligible for merging. The other have end dates in the future.
+        assertThat(
+            ((UpdateSettingsRequest) updateSettingsRequest).indices(),
+            arrayContaining(dataStream.getIndices().getFirst().getName())
+        );
+        assertThat(
+            ((UpdateSettingsRequest) updateSettingsRequest).settings().keySet(),
+            containsInAnyOrder(
+                MergePolicyConfig.INDEX_MERGE_POLICY_FLOOR_SEGMENT_SETTING.getKey(),
+                MergePolicyConfig.INDEX_MERGE_POLICY_MERGE_FACTOR_SETTING.getKey()
+            )
+        );
     }
 
     public void testRetentionSkippedWhilstDownsamplingInProgress() {
@@ -332,14 +386,14 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             Metadata.Builder metaBuilder = Metadata.builder(metadata);
 
             String firstBackingIndex = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
-            IndexMetadata indexMetadata = metadata.index(firstBackingIndex);
+            IndexMetadata indexMetadata = metadata.getProject().index(firstBackingIndex);
             IndexMetadata.Builder indexMetaBuilder = IndexMetadata.builder(indexMetadata);
             indexMetaBuilder.settings(
                 Settings.builder()
                     .put(indexMetadata.getSettings())
                     .put(
                         IndexMetadata.INDEX_DOWNSAMPLE_STATUS_KEY,
-                        randomValueOtherThan(UNKNOWN, () -> randomFrom(IndexMetadata.DownsampleTaskStatus.values()))
+                        STARTED // See: See TransportDownsampleAction#createDownsampleIndex(...)
                     )
             );
             indexMetaBuilder.putCustom(
@@ -365,7 +419,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             Metadata.Builder metaBuilder = Metadata.builder(metadata);
 
             String firstBackingIndex = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
-            IndexMetadata indexMetadata = metadata.index(firstBackingIndex);
+            IndexMetadata indexMetadata = metadata.getProject().index(firstBackingIndex);
             IndexMetadata.Builder indexMetaBuilder = IndexMetadata.builder(indexMetadata);
             indexMetaBuilder.settings(
                 Settings.builder().put(indexMetadata.getSettings()).putNull(IndexMetadata.INDEX_DOWNSAMPLE_STATUS_KEY)
@@ -504,7 +558,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
 
         // update the backing indices to be ILM managed
         for (Index index : dataStream.getIndices()) {
-            IndexMetadata indexMetadata = metadata.index(index);
+            IndexMetadata indexMetadata = metadata.getProject().index(index);
             IndexMetadata.Builder indexMetaBuilder = IndexMetadata.builder(indexMetadata);
             indexMetaBuilder.settings(Settings.builder().put(indexMetadata.getSettings()).put(IndexMetadata.LIFECYCLE_NAME, "ILM_policy"));
             metaBuilder.put(indexMetaBuilder.build(), true);
@@ -556,7 +610,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
 
         // update the backing indices to be ILM managed so they should be removed from the error store on the next DSL run
         for (Index index : ilmManagedDataStream.getIndices()) {
-            IndexMetadata indexMetadata = metadata.index(index);
+            IndexMetadata indexMetadata = metadata.getProject().index(index);
             IndexMetadata.Builder indexMetaBuilder = IndexMetadata.builder(indexMetadata);
             indexMetaBuilder.settings(Settings.builder().put(indexMetadata.getSettings()).put(IndexMetadata.LIFECYCLE_NAME, "ILM_policy"));
             metaBuilder.put(indexMetaBuilder.build(), true);
@@ -607,16 +661,25 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         // There are 3 backing indices. One gets rolled over. The other two get force merged:
         assertBusy(() -> {
             assertThat(
-                clusterService.state().metadata().index(dataStream.getIndices().get(0)).getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
-                notNullValue()
-            );
-            assertThat(
-                clusterService.state().metadata().index(dataStream.getIndices().get(1)).getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
+                clusterService.state()
+                    .metadata()
+                    .getProject()
+                    .index(dataStream.getIndices().get(0))
+                    .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
                 notNullValue()
             );
             assertThat(
                 clusterService.state()
                     .metadata()
+                    .getProject()
+                    .index(dataStream.getIndices().get(1))
+                    .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
+                notNullValue()
+            );
+            assertThat(
+                clusterService.state()
+                    .metadata()
+                    .getProject()
                     .index(dataStream.getIndices().get(0))
                     .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY)
                     .get(FORCE_MERGE_COMPLETED_TIMESTAMP_METADATA_KEY),
@@ -625,6 +688,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             assertThat(
                 clusterService.state()
                     .metadata()
+                    .getProject()
                     .index(dataStream.getIndices().get(1))
                     .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY)
                     .get(FORCE_MERGE_COMPLETED_TIMESTAMP_METADATA_KEY),
@@ -662,7 +726,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         builder = Metadata.builder(clusterService.state().metadata()).put(newIndexMetadata, true);
         state = ClusterState.builder(clusterService.state()).metadata(builder).build();
         setState(clusterService, state);
-        DataStream dataStream2 = dataStream.addBackingIndex(clusterService.state().metadata(), newIndexMetadata.getIndex());
+        DataStream dataStream2 = dataStream.addBackingIndex(clusterService.state().metadata().getProject(), newIndexMetadata.getIndex());
         builder = Metadata.builder(clusterService.state().metadata());
         builder.put(dataStream2);
         state = ClusterState.builder(clusterService.state()).metadata(builder).build();
@@ -672,12 +736,17 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         assertThat(((ForceMergeRequest) clientSeenRequests.get(3)).indices().length, is(1));
         assertBusy(() -> {
             assertThat(
-                clusterService.state().metadata().index(dataStream2.getIndices().get(2)).getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
+                clusterService.state()
+                    .metadata()
+                    .getProject()
+                    .index(dataStream2.getIndices().get(2))
+                    .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
                 notNullValue()
             );
             assertThat(
                 clusterService.state()
                     .metadata()
+                    .getProject()
                     .index(dataStream2.getIndices().get(2))
                     .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY)
                     .get(FORCE_MERGE_COMPLETED_TIMESTAMP_METADATA_KEY),
@@ -734,6 +803,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
                 assertThat(
                     clusterService.state()
                         .metadata()
+                        .getProject()
                         .index(dataStream.getIndices().get(0))
                         .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
                     nullValue()
@@ -765,6 +835,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
                 assertThat(
                     clusterService.state()
                         .metadata()
+                        .getProject()
                         .index(dataStream.getIndices().get(0))
                         .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
                     nullValue()
@@ -790,6 +861,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
                 assertThat(
                     clusterService.state()
                         .metadata()
+                        .getProject()
                         .index(dataStream.getIndices().get(0))
                         .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
                     nullValue()
@@ -812,6 +884,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
                 assertThat(
                     clusterService.state()
                         .metadata()
+                        .getProject()
                         .index(dataStream.getIndices().get(0))
                         .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
                     notNullValue()
@@ -819,6 +892,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
                 assertThat(
                     clusterService.state()
                         .metadata()
+                        .getProject()
                         .index(dataStream.getIndices().get(1))
                         .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY),
                     notNullValue()
@@ -826,6 +900,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
                 assertThat(
                     clusterService.state()
                         .metadata()
+                        .getProject()
                         .index(dataStream.getIndices().get(0))
                         .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY)
                         .get(FORCE_MERGE_COMPLETED_TIMESTAMP_METADATA_KEY),
@@ -834,6 +909,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
                 assertThat(
                     clusterService.state()
                         .metadata()
+                        .getProject()
                         .index(dataStream.getIndices().get(1))
                         .getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY)
                         .get(FORCE_MERGE_COMPLETED_TIMESTAMP_METADATA_KEY),
@@ -894,7 +970,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         builder = Metadata.builder(clusterService.state().metadata()).put(newIndexMetadata, true);
         ClusterState state = ClusterState.builder(clusterService.state()).metadata(builder).build();
         setState(clusterService, state);
-        DataStream dataStream2 = dataStream.addBackingIndex(clusterService.state().metadata(), newIndexMetadata.getIndex());
+        DataStream dataStream2 = dataStream.addBackingIndex(clusterService.state().metadata().getProject(), newIndexMetadata.getIndex());
         builder = Metadata.builder(clusterService.state().metadata());
         builder.put(dataStream2);
         state = ClusterState.builder(clusterService.state()).metadata(builder).build();
@@ -941,7 +1017,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             assertThat(failure.get(), equalTo(exception));
             ClusterState clusterState = createClusterState(targetIndex, null);
             ClusterState newClusterState = task.execute(clusterState);
-            IndexMetadata indexMetadata = newClusterState.metadata().index(targetIndex);
+            IndexMetadata indexMetadata = newClusterState.metadata().getProject().index(targetIndex);
             assertThat(indexMetadata, notNullValue());
             Map<String, String> dataStreamLifecycleMetadata = indexMetadata.getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY);
             assertThat(dataStreamLifecycleMetadata, notNullValue());
@@ -966,7 +1042,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             );
             ClusterState clusterState = createClusterState(targetIndex, preExistingDataStreamLifecycleCustomMetadata);
             ClusterState newClusterState = task.execute(clusterState);
-            IndexMetadata indexMetadata = newClusterState.metadata().index(targetIndex);
+            IndexMetadata indexMetadata = newClusterState.metadata().getProject().index(targetIndex);
             Map<String, String> dataStreamLifecycleMetadata = indexMetadata.getCustomData(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY);
             assertThat(dataStreamLifecycleMetadata, notNullValue());
             assertThat(dataStreamLifecycleMetadata.size(), equalTo(2));
@@ -990,7 +1066,8 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             RolloverRequest rolloverRequest = DataStreamLifecycleService.getDefaultRolloverRequest(
                 new RolloverConfiguration(randomConcreteRolloverConditions, Set.of("max_age")),
                 "my-data-stream",
-                null
+                null,
+                false
             );
             assertThat(rolloverRequest.getRolloverTarget(), equalTo("my-data-stream"));
             assertThat(
@@ -1004,7 +1081,8 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             RolloverRequest rolloverRequestWithRetention = DataStreamLifecycleService.getDefaultRolloverRequest(
                 new RolloverConfiguration(randomConcreteRolloverConditions, Set.of("max_age")),
                 "my-data-stream",
-                TimeValue.timeValueDays(3)
+                TimeValue.timeValueDays(3),
+                false
             );
             assertThat(
                 rolloverRequestWithRetention.getConditions(),
@@ -1021,14 +1099,16 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             RolloverRequest rolloverRequest = DataStreamLifecycleService.getDefaultRolloverRequest(
                 new RolloverConfiguration(randomConcreteRolloverConditions),
                 "my-data-stream",
-                null
+                null,
+                false
             );
             assertThat(rolloverRequest.getRolloverTarget(), equalTo("my-data-stream"));
             assertThat(rolloverRequest.getConditions(), equalTo(randomConcreteRolloverConditions));
             RolloverRequest rolloverRequestWithRetention = DataStreamLifecycleService.getDefaultRolloverRequest(
                 new RolloverConfiguration(randomConcreteRolloverConditions),
                 "my-data-stream",
-                TimeValue.timeValueDays(1)
+                TimeValue.timeValueDays(1),
+                false
             );
             assertThat(rolloverRequestWithRetention.getConditions(), equalTo(randomConcreteRolloverConditions));
         }
@@ -1119,7 +1199,10 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         builder = Metadata.builder(clusterService.state().metadata()).put(newIndexMetadata, true);
         state = ClusterState.builder(clusterService.state()).metadata(builder).build();
         setState(clusterService, state);
-        DataStream modifiedDataStream = dataStream.addBackingIndex(clusterService.state().metadata(), newIndexMetadata.getIndex());
+        DataStream modifiedDataStream = dataStream.addBackingIndex(
+            clusterService.state().metadata().getProject(),
+            newIndexMetadata.getIndex()
+        );
         builder = Metadata.builder(clusterService.state().metadata());
         builder.put(modifiedDataStream);
         state = ClusterState.builder(clusterService.state()).metadata(builder).build();
@@ -1160,7 +1243,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(builder).nodes(nodesBuilder).build();
         setState(clusterService, state);
         String firstGenIndexName = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
-        Index firstGenIndex = clusterService.state().metadata().index(firstGenIndexName).getIndex();
+        Index firstGenIndex = clusterService.state().metadata().getProject().index(firstGenIndexName).getIndex();
         Set<Index> affectedIndices = dataStreamLifecycleService.maybeExecuteDownsampling(
             clusterService.state(),
             dataStream,
@@ -1197,12 +1280,12 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
 
         String downsampleIndexName = DownsampleConfig.generateDownsampleIndexName(
             DOWNSAMPLED_INDEX_PREFIX,
-            state.metadata().index(firstGenIndex),
+            state.metadata().getProject().index(firstGenIndex),
             new DateHistogramInterval("5m")
         );
         {
             // let's simulate the in-progress downsampling
-            IndexMetadata firstGenMetadata = state.metadata().index(firstGenIndexName);
+            IndexMetadata firstGenMetadata = state.metadata().getProject().index(firstGenIndexName);
             Metadata.Builder metadataBuilder = Metadata.builder(state.metadata());
 
             metadataBuilder.put(
@@ -1228,7 +1311,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
 
         {
             // mark the downsample operation as complete
-            IndexMetadata firstGenMetadata = state.metadata().index(firstGenIndexName);
+            IndexMetadata firstGenMetadata = state.metadata().getProject().index(firstGenIndexName);
             Metadata.Builder metadataBuilder = Metadata.builder(state.metadata());
 
             metadataBuilder.put(
@@ -1254,12 +1337,12 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         assertThat(affectedIndices, is(Set.of(firstGenIndex)));
         assertBusy(() -> {
             ClusterState newState = clusterService.state();
-            IndexAbstraction downsample = newState.metadata().getIndicesLookup().get(downsampleIndexName);
+            IndexAbstraction downsample = newState.metadata().getProject().getIndicesLookup().get(downsampleIndexName);
             // the downsample index must be part of the data stream
             assertThat(downsample.getParentDataStream(), is(notNullValue()));
             assertThat(downsample.getParentDataStream().getName(), is(dataStreamName));
             // the source index was deleted
-            IndexAbstraction sourceIndexAbstraction = newState.metadata().getIndicesLookup().get(firstGenIndexName);
+            IndexAbstraction sourceIndexAbstraction = newState.metadata().getProject().getIndicesLookup().get(firstGenIndexName);
             assertThat(sourceIndexAbstraction, is(nullValue()));
 
             // no further requests should be triggered
@@ -1310,7 +1393,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         // add another index to the cluster state that clashes with the expected downsample index name for the configured round
         String downsampleIndexName = DownsampleConfig.generateDownsampleIndexName(
             DOWNSAMPLED_INDEX_PREFIX,
-            state.metadata().index(firstGenIndexName),
+            state.metadata().getProject().index(firstGenIndexName),
             new DateHistogramInterval("5m")
         );
         Metadata.Builder newMetadata = Metadata.builder(state.metadata())
@@ -1320,7 +1403,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         state = ClusterState.builder(state).metadata(newMetadata).nodes(nodesBuilder).build();
         setState(clusterService, state);
 
-        Index firstGenIndex = state.metadata().index(firstGenIndexName).getIndex();
+        Index firstGenIndex = state.metadata().getProject().index(firstGenIndexName).getIndex();
         dataStreamLifecycleService.maybeExecuteDownsampling(clusterService.state(), dataStream, List.of(firstGenIndex));
 
         assertThat(clientSeenRequests.size(), is(0));
@@ -1344,7 +1427,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             dataStreamName,
             List.of(Tuple.tuple(start1, end1), Tuple.tuple(start2, end2), Tuple.tuple(start3, end3))
         );
-        DataStream dataStream = clusterState.getMetadata().dataStreams().get(dataStreamName);
+        DataStream dataStream = clusterState.getMetadata().getProject().dataStreams().get(dataStreamName);
 
         {
             // test for an index for which `now` is outside its time bounds
@@ -1372,13 +1455,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         {
             // non time_series indices are not within time bounds (they don't have any)
             IndexMetadata indexMeta = IndexMetadata.builder(randomAlphaOfLengthBetween(10, 30))
-                .settings(
-                    Settings.builder()
-                        .put(IndexMetadata.INDEX_NUMBER_OF_SHARDS_SETTING.getKey(), 1)
-                        .put(IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING.getKey(), 1)
-                        .put(IndexMetadata.SETTING_INDEX_VERSION_CREATED.getKey(), IndexVersion.current())
-                        .build()
-                )
+                .settings(indexSettings(1, 1).put(IndexMetadata.SETTING_INDEX_VERSION_CREATED.getKey(), IndexVersion.current()))
                 .build();
 
             Metadata newMetadata = Metadata.builder(clusterState.metadata()).put(indexMeta, true).build();
@@ -1405,13 +1482,8 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
             () -> now.getAndAdd(delta),
             errorStore,
             mock(AllocationService.class),
-            new DataStreamLifecycleHealthInfoPublisher(
-                Settings.EMPTY,
-                getTransportRequestsRecordingClient(),
-                clusterService,
-                errorStore,
-                new FeatureService(List.of(new DataStreamFeatures()))
-            )
+            new DataStreamLifecycleHealthInfoPublisher(Settings.EMPTY, getTransportRequestsRecordingClient(), clusterService, errorStore),
+            globalRetentionSettings
         );
         assertThat(service.getLastRunDuration(), is(nullValue()));
         assertThat(service.getTimeBetweenStarts(), is(nullValue()));
@@ -1425,6 +1497,150 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         assertThat(service.getTimeBetweenStarts(), is(2 * delta));
     }
 
+    public void testTargetIndices() {
+        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
+        int numBackingIndices = 3;
+        int numFailureIndices = 2;
+        int mutationBranch = randomIntBetween(0, 2);
+        DataStreamOptions dataStreamOptions = switch (mutationBranch) {
+            case 0 -> DataStreamOptions.EMPTY;
+            case 1 -> DataStreamOptions.FAILURE_STORE_ENABLED;
+            case 2 -> DataStreamOptions.FAILURE_STORE_DISABLED;
+            default -> throw new IllegalStateException("Unexpected value: " + mutationBranch);
+        };
+        Metadata.Builder builder = Metadata.builder();
+        DataStream dataStream = createDataStream(
+            builder,
+            dataStreamName,
+            numBackingIndices,
+            numFailureIndices,
+            settings(IndexVersion.current()),
+            new DataStreamLifecycle(),
+            now
+        ).copy().setDataStreamOptions(dataStreamOptions).build(); // failure store is managed even when disabled
+        builder.put(dataStream);
+        Metadata metadata = builder.build();
+        Set<Index> indicesToExclude = Set.of(dataStream.getIndices().get(0), dataStream.getFailureIndices().get(0));
+        List<Index> targetBackingIndicesOnly = DataStreamLifecycleService.getTargetIndices(
+            dataStream,
+            indicesToExclude,
+            metadata.getProject()::index,
+            false
+        );
+        assertThat(targetBackingIndicesOnly, equalTo(dataStream.getIndices().subList(1, 3)));
+        List<Index> targetIndices = DataStreamLifecycleService.getTargetIndices(
+            dataStream,
+            indicesToExclude,
+            metadata.getProject()::index,
+            true
+        );
+        assertThat(
+            targetIndices,
+            equalTo(List.of(dataStream.getIndices().get(1), dataStream.getIndices().get(2), dataStream.getFailureIndices().get(1)))
+        );
+    }
+
+    public void testFailureStoreIsManagedEvenWhenDisabled() {
+        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
+        int numBackingIndices = 1;
+        Metadata.Builder builder = Metadata.builder();
+        DataStream dataStream = createDataStream(
+            builder,
+            dataStreamName,
+            numBackingIndices,
+            2,
+            settings(IndexVersion.current()),
+            DataStreamLifecycle.newBuilder().dataRetention(0).build(),
+            now
+        ).copy().setDataStreamOptions(DataStreamOptions.FAILURE_STORE_DISABLED).build(); // failure store is managed even when disabled
+        builder.put(dataStream);
+
+        ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(builder).build();
+
+        dataStreamLifecycleService.run(state);
+        assertThat(clientSeenRequests.size(), is(3));
+        assertThat(clientSeenRequests.get(0), instanceOf(RolloverRequest.class));
+        RolloverRequest rolloverBackingIndexRequest = (RolloverRequest) clientSeenRequests.get(0);
+        assertThat(rolloverBackingIndexRequest.getRolloverTarget(), is(dataStreamName));
+        assertThat(clientSeenRequests.get(1), instanceOf(RolloverRequest.class));
+        RolloverRequest rolloverFailureIndexRequest = (RolloverRequest) clientSeenRequests.get(1);
+        assertThat(
+            rolloverFailureIndexRequest.getRolloverTarget(),
+            is(IndexNameExpressionResolver.combineSelector(dataStreamName, IndexComponentSelector.FAILURES))
+        );
+        assertThat(((DeleteIndexRequest) clientSeenRequests.get(2)).indices()[0], is(dataStream.getFailureIndices().get(0).getName()));
+    }
+
+    public void testMaybeExecuteRetentionSuccessfulDownsampledIndex() {
+        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
+        ClusterState state = downsampleSetup(dataStreamName, SUCCESS);
+        DataStream dataStream = state.metadata().getProject().dataStreams().get(dataStreamName);
+        String firstGenIndexName = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
+
+        // Executing the method to be tested:
+        Set<Index> indicesToBeRemoved = dataStreamLifecycleService.maybeExecuteRetention(clusterService.state(), dataStream, Set.of());
+        assertThat(indicesToBeRemoved, contains(state.getMetadata().getProject().index(firstGenIndexName).getIndex()));
+    }
+
+    public void testMaybeExecuteRetentionDownsampledIndexInProgress() {
+        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
+        ClusterState state = downsampleSetup(dataStreamName, STARTED);
+        DataStream dataStream = state.metadata().getProject().dataStreams().get(dataStreamName);
+        String firstGenIndexName = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
+
+        // Executing the method to be tested:
+        Set<Index> indicesToBeRemoved = dataStreamLifecycleService.maybeExecuteRetention(clusterService.state(), dataStream, Set.of());
+        assertThat(indicesToBeRemoved, empty());
+    }
+
+    public void testMaybeExecuteRetentionDownsampledUnknown() {
+        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
+        ClusterState state = downsampleSetup(dataStreamName, UNKNOWN);
+        DataStream dataStream = state.metadata().getProject().dataStreams().get(dataStreamName);
+        String firstGenIndexName = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
+
+        // Executing the method to be tested:
+        Set<Index> indicesToBeRemoved = dataStreamLifecycleService.maybeExecuteRetention(clusterService.state(), dataStream, Set.of());
+        assertThat(indicesToBeRemoved, contains(state.getMetadata().getProject().index(firstGenIndexName).getIndex()));
+    }
+
+    private ClusterState downsampleSetup(String dataStreamName, IndexMetadata.DownsampleTaskStatus status) {
+        // Base setup:
+        Metadata.Builder builder = Metadata.builder();
+        DataStream dataStream = createDataStream(
+            builder,
+            dataStreamName,
+            2,
+            settings(IndexVersion.current()).put(IndexSettings.MODE.getKey(), IndexMode.TIME_SERIES)
+                .put("index.routing_path", "@timestamp"),
+            DataStreamLifecycle.newBuilder()
+                .downsampling(
+                    new Downsampling(
+                        List.of(new Round(TimeValue.timeValueMillis(0), new DownsampleConfig(new DateHistogramInterval("5m"))))
+                    )
+                )
+                .dataRetention(TimeValue.timeValueMillis(1))
+                .build(),
+            now
+        );
+        builder.put(dataStream);
+
+        // Update the first backing index so that is appears to have been downsampled:
+        String firstGenIndexName = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
+        var imd = builder.get(firstGenIndexName);
+        var imdBuilder = new IndexMetadata.Builder(imd);
+        imdBuilder.settings(Settings.builder().put(imd.getSettings()).put(IndexMetadata.INDEX_DOWNSAMPLE_STATUS.getKey(), status).build());
+        builder.put(imdBuilder);
+
+        // Attaching state:
+        String nodeId = "localNode";
+        DiscoveryNodes.Builder nodesBuilder = buildNodes(nodeId);
+        nodesBuilder.masterNodeId(nodeId);
+        ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(builder).nodes(nodesBuilder).build();
+        setState(clusterService, state);
+        return state;
+    }
+
     /*
      * Creates a test cluster state with the given indexName. If customDataStreamLifecycleMetadata is not null, it is added as the value
      * of the index's custom metadata named "data_stream_lifecycle".
@@ -1433,12 +1649,14 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         var routingTableBuilder = RoutingTable.builder();
         Metadata.Builder metadataBuilder = Metadata.builder();
         Map<String, IndexMetadata> indices = new HashMap<>();
-        Settings indexSettings = Settings.builder()
-            .put(IndexMetadata.INDEX_NUMBER_OF_SHARDS_SETTING.getKey(), randomIntBetween(1, 10))
-            .put(IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING.getKey(), randomIntBetween(0, 3))
-            .put(IndexMetadata.SETTING_INDEX_VERSION_CREATED.getKey(), IndexVersion.current())
-            .build();
-        IndexMetadata.Builder indexMetadataBuilder = IndexMetadata.builder(indexName).version(randomLong()).settings(indexSettings);
+        IndexMetadata.Builder indexMetadataBuilder = IndexMetadata.builder(indexName)
+            .version(randomLong())
+            .settings(
+                indexSettings(randomIntBetween(1, 10), randomIntBetween(0, 3)).put(
+                    IndexMetadata.SETTING_INDEX_VERSION_CREATED.getKey(),
+                    IndexVersion.current()
+                )
+            );
         if (customDataStreamLifecycleMetadata != null) {
             indexMetadataBuilder.putCustom(LIFECYCLE_CUSTOM_INDEX_METADATA_KEY, customDataStreamLifecycleMetadata);
         }
@@ -1508,7 +1726,7 @@ public class DataStreamLifecycleServiceTests extends ESTestCase {
         ByteSizeValue minSize = randomBoolean() ? randomByteSizeValue() : null;
         ByteSizeValue minPrimaryShardSize = randomBoolean() ? randomByteSizeValue() : null;
         Long minDocs = randomBoolean() ? randomNonNegativeLong() : null;
-        TimeValue minAge = randomBoolean() ? TimeValue.parseTimeValue(randomPositiveTimeValue(), "rollover_action_test") : null;
+        TimeValue minAge = randomBoolean() ? randomPositiveTimeValue() : null;
         Long minPrimaryShardDocs = randomBoolean() ? randomNonNegativeLong() : null;
 
         return RolloverConditions.newBuilder()
