@@ -17,13 +17,12 @@ import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xpack.core.ilm.Step.StepKey;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 /**
  * Converts a CCR following index into a normal, standalone index, once the index is ready to be safely separated.
- *
+ * <p>
  * "Readiness" is composed of two conditions:
  * 1) The index must have {@link LifecycleSettings#LIFECYCLE_INDEXING_COMPLETE} set to {@code true}, which is
  *      done automatically by {@link RolloverAction} (or manually).
@@ -59,7 +58,7 @@ public final class UnfollowAction implements LifecycleAction {
             indexingComplete,
             nextStepKey,
             (index, clusterState) -> {
-                IndexMetadata followerIndex = clusterState.metadata().index(index);
+                IndexMetadata followerIndex = clusterState.metadata().getProject().index(index);
                 Map<String, String> customIndexMetadata = followerIndex.getCustomData(CCR_METADATA_KEY);
                 // if the index has no CCR metadata we'll skip the unfollow action completely
                 return customIndexMetadata == null;
@@ -72,7 +71,7 @@ public final class UnfollowAction implements LifecycleAction {
         UnfollowFollowerIndexStep step5 = new UnfollowFollowerIndexStep(unfollowFollowerIndex, openFollowerIndex, client);
         OpenIndexStep step6 = new OpenIndexStep(openFollowerIndex, waitForYellowStep, client);
         WaitForIndexColorStep step7 = new WaitForIndexColorStep(waitForYellowStep, nextStepKey, ClusterHealthStatus.YELLOW);
-        return Arrays.asList(conditionalSkipUnfollowStep, step1, step2, step3, step4, step5, step6, step7);
+        return List.of(conditionalSkipUnfollowStep, step1, step2, step3, step4, step5, step6, step7);
     }
 
     @Override
